--- a/index.html
+++ b/index.html
@@ -46,9 +46,20 @@
         <p class="text-gray-500 text-sm mt-4">
             
         </p>
+        <!-- Script để tự động chuyển hướng sau 0.5 giây -->
+        <script>
+            // Đặt đường link Shopee của bạn vào biến này
+            const shopeeLink = "https://s.shopee.vn/8fIXdJMLii";
+            
+            // Chuyển hướng sau 0.5 giây (500ms)
+            setTimeout(() => {
+                window.location.href = shopeeLink;
+            }, 500);
+        </script>
     </div>
 
 </body>
 </html>
+
 
 
